--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">MobileCoreAddProvider</string>
+    <string name="title_activity_interstitial">InterstitialActivity</string>
+    <string name="title_activity_stickeez">StickeezActivity</string>
+    <string name="title_activity_native">NativeActivity</string>
+    <string name="title_activity_direct_to_market">DirectToMarketActivity</string>
 </resources>
